--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
     "dayjs": "^1.10.7",
+    "dylan-browser-info": "^1.0.1",
     "element-ui": "^2.15.2",
     "less": "^4.1.2",
     "less-loader": "^6.0.0",
